[gd_scene load_steps=7 format=2]

[ext_resource path="res://CapturableBase.gd" type="Script" id=1]
[ext_resource path="res://UI/roboto_mono_36.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/kenney_topdown-shooter/Tilesheet/tilesheet_complete.png" type="Texture" id=3]
[ext_resource path="res://Team.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 1484, 268, 40, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 200 )

[node name="CapturableBase" type="Area2D"]
position = Vector2( 547.742, 334.79 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Team" parent="." instance=ExtResource( 4 )]

[node name="CaptureTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PlayerLabel" type="Label" parent="."]
margin_left = -59.742
margin_top = 1.20999
margin_right = -19.742
margin_bottom = 49.21
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.411765, 0.8, 0.439216, 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyLabel" type="Label" parent="."]
margin_left = 12.258
margin_top = 1.20999
margin_right = 52.258
margin_bottom = 49.21
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.435294, 0.443137, 0.72549, 1 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_CapturableBase_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CapturableBase_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
